# perpetual-calendar-interactive-explorer

./: .gitignore  CONTRIBUTING.md  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/: README.md
docs/: DESIGN.md
src/: __init__.py  calendar_app.py
tests/: __init__.py  test_calendar.py
